border overlap fix

--- a/s2c-clientapp/src/Styles/Draw.css
+++ b/s2c-clientapp/src/Styles/Draw.css
@@ -116,6 +116,7 @@
     background-color: white;
     width: 100%;
     height: 100%;
+    border-radius: 5px;
 }
 
 @media (hover: none) {
