--- a/s2c-clientapp/src/Styles/Validation.css
+++ b/s2c-clientapp/src/Styles/Validation.css
@@ -71,7 +71,6 @@
 }
 
 .validation .hint-div {
-    z-index: 20;
     position: fixed;
     right: 0;
     bottom: 0;
@@ -97,6 +96,7 @@
     background-color: white;
     width: 100%;
     height: 100%;
+    border-radius: 5px;
 }
 
 @media (hover: none) {
